--- a/Fragements/poll-display/index.html
+++ b/Fragements/poll-display/index.html
@@ -102,7 +102,7 @@
         <div class="add-form-content">
             <iframe
                 id="add-form-iframe"
-                src="group/guest/~/control_panel/manage?p_p_id=com_liferay_dynamic_data_mapping_form_web_portlet_DDMFormAdminPortlet&p_p_lifecycle=0&p_p_state=maximized&p_v_l_s_g_id=${themeDisplay.getScopeGroupId()}"
+                src="/group/portal/~/control_panel/manage?p_p_id=com_liferay_dynamic_data_mapping_form_web_portlet_DDMFormAdminPortlet&p_p_lifecycle=0&p_p_state=maximized&p_p_mode=view"
                 width="100%"
                 height="500px"
                 frameborder="0"
